--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             font-size: 16px;
             margin-right: 10px;
         }
-        #status, #result, #progress {
+        #status, #result, #progress, #downloadLink {
             margin-bottom: 20px;
         }
     </style>
@@ -26,6 +26,7 @@
     <div id="status">选择的文件数: 0</div>
     <div id="result">状态: 等待选择文件</div>
     <div id="progress"></div>
+    <div id="downloadLink"></div>
     <input type="file" id="fileInput" multiple accept="image/jpeg,image/png" style="display: none;">
     <button onclick="document.getElementById('fileInput').click()">选择照片</button>
     <button onclick="processImages()">处理</button>
@@ -49,6 +50,7 @@
 
             document.getElementById('result').textContent = '状态：正在处理...';
             document.getElementById('progress').textContent = '';
+            document.getElementById('downloadLink').innerHTML = '';
 
             let processed = 0;
             let failed = 0;
@@ -74,7 +76,19 @@
 
             try {
                 const content = await zip.generateAsync({type:"blob"});
-                saveAs(content, "modified_images.zip");
+                const blobUrl = URL.createObjectURL(content);
+
+                // 创建一个下载链接
+                const link = document.createElement('a');
+                link.href = blobUrl;
+                link.download = "modified_images.zip";
+                link.textContent = "点击这里下载ZIP文件";
+
+                // 将链接添加到页面
+                const downloadLinkDiv = document.getElementById('downloadLink');
+                downloadLinkDiv.innerHTML = '';
+                downloadLinkDiv.appendChild(link);
+
                 document.getElementById('result').textContent = `状态：完成。成功处理: ${processed}, 失败: ${failed}`;
             } catch (error) {
                 console.error('生成ZIP文件时出错:', error);
